style.css
html, body {
	padding: 0;
	margin: 0;
}

body {
	font-family: Georgia
}

h1, h2, h3, h4, h5, h6, .impact {
	font-family: Impact, Verdana, Arial;
}

.impact {
	font-size: 1.2em;
}

iframe {
	max-width: 100%;
	display: block;
	margin: 0 auto;
}

img {
	width: 100%;
}

h1, h2, h3, h4, h5, h6 {
	margin: 20px;
	padding: 10px;
}

p {
	margin: 10px 20px 0;
	line-height: 1.4em;
}

h1 {
	background-color: #bada55;
}

h2 {
	background-color: #F781D8;
}

h3 {
	background-color: #2ECCFA;
}

